2011-12-01  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (v_skip): Bugfix: Nov 12 commit caused regression:
	skip min/max arguments not working!

	* RELNOTES: Updated.

2011-12-01  Kaz Kylheku  <kaz@kylheku.com>

	Dropping the silly cons return value from txeval.
	Two interfaces are provided to the function. One throws
	on unbound variable, the other which evaluates them to the
	symbol noval_s (used in exception handling).

	* match.c (do_txeval): New static function.
	(txeval): Functionality moved to do_txeval.
	(txeval_allow_ub): New static function.
	(vars_to_bindings, h_fun, v_freeform, v_next, v_merge, v_bind, v_set,
	v_cat, v_output, v_deffilter, v_fun): No need to
	use cdr to get the value from txeval.
	(v_throw): Use txeval_ub_allowed, since unbound variables
	are allowed in throw.
	(v_try): Detect unbound arguments by checking for noval_s rather than
	nil. No need to use cdr.

2011-12-01  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (eval_form): Function renamed to txeval so its is
	not confused with the Lisp evaluation functions.
	(vars_to_bindings, h_fun, v_freeform, v_next, v_merge, v_bind, v_set,
	v_cat, v_output, v_throw, v_deffilter, v_fun): Updated.

2011-11-30  Kaz Kylheku  <kaz@kylheku.com>

	* lib.h (or2): Restore macro version of or2, because we need
	the sequencing! Making it an inline function broke the tests.
	But we can't have multiple evaluation either, so it's going to use
	a temporary lexical variable.
	(uses_or2): Macro which declares the lexical variable needed by or2.

	* debug.c (debug): add uses_or2.

	* eval.c (eval_intrinsic, op_modplace): Likewise.

	* lib.c (lazy_str, lazy_str_force_upto, lazy_str_get_trailing_list):
	Likewise.

	* match.c (h_parallel, v_freeform, v_parallel, v_output): Likewise.

	* parser.y (unquotes_occur): Likewise.

	* stream.c (format): Likewise.

2011-11-30  Kaz Kylheku  <kaz@kylheku.com>

	Removing useless hash table.

	* parser.h (ln_to_forms_hash): Declaration removed.
